Generalize run tasks